--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 body {
   background: linear-gradient(to right, #ffb347, #ffcc33);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
-h1 {
+h1, h2 {
   font-family: 'Pacifico', cursive;
-  font-size: 72px;
   color: white;
   text-shadow: 1px 1px 3px black;
+}
+
+h1 {
+  font-size: 72px;
+}
+
+h2 {
+  font-size: 36px;
 }
