--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-  background: linear-gradient(to right, #ffb347, #ffcc33);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,7 +7,7 @@ body {
 }
 
 h1, h2 {
-  font-family: 'Pacifico', cursive;
+  font-family: 'Open Sans', sans-serif;
   color: white;
   text-shadow: 1px 1px 3px black;
 }
